<resources>
    <string name="app_name">Amonger</string>
    <string name="search_label">Search</string>
    <string name="name_label">Nickname</string>
    <string name="friend_code_label">Friend code</string>
    <string name="player_aka_hint">Enter other known nicknames of this player</string>
    <string name="player_host_label">Is host:</string>
    <string name="player_notes_hint">Notes about player</string>
    <string name="save_label">Save</string>
    <string name="notes_label">Notes</string>
    <string name="aka_label">Also known as</string>
    <string name="theme_mode_label">Night mode</string>
    <string name="delete_label">Delete</string>
    <string name="auth_failed_message">Anonymous authorization failed. Check your internet connection and try again.</string>

    <!--Chips-->
    <string name="skeld_label">Skeld</string>
    <string name="polus_label">Polus</string>
    <string name="airship_label">Airship</string>
    <string name="all_maps_label">All maps</string>
    <string name="host_label">Host</string>
    <string name="mod_label">Mod</string>
    <string name="low_cd_player_label">10cd player</string>
    <string name="medium_cd_player_label">15cd player</string>
    <string name="high_cd_player_label">17+ cd player</string>
    <string name="old_label">Old</string>
    <string name="beginner_label">Beginner</string>
    <string name="map_filter_label">Maps</string>
    <string name="cd_filter_label">Cooldown</string>

    <string-array name="map_filter_variants">
        <item>Not selected</item>
        <item>@string/skeld_label</item>
        <item>@string/polus_label</item>
        <item>@string/airship_label</item>
        <item>@string/all_maps_label</item>
    </string-array>

    <string-array name="cd_filter_variants">
        <item>Not selected</item>
        <item>@string/low_cd_player_label</item>
        <item>@string/medium_cd_player_label</item>
        <item>@string/high_cd_player_label</item>
    </string-array>

</resources>